# dep_graph_rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: graph.rs  main.rs  module.rs  parser.rs  query.rs
test_proj1/: Cargo.toml
test_proj1/src/: lib.rs  mod3.rs
test_proj1/src/graphics/: mod.rs
test_proj1/src/graphics/plattform/: mod.rs  ps1.rs
test_proj1/src/mod1/: mod.rs
test_proj1/src/mod2/: mod.rs
