[package]
authors = ["Pascal Seitz <pascal.seitz@gmail.com>"]
name = "dep_graph_rs"
version = "0.2.0"
edition = "2021"
description = "Visualize/analyze a Rust crate's internal dependencies"
keywords = ["dependencies", "module", "mod", "graph", "dot"]
homepage = "https://github.com/pseitz/dep_graph_rs"
repository = "https://github.com/pseitz/dep_graph_rs"
readme = "README.md"
license = "MIT"
include = ["src/*.rs", "*.md", "LICENSE"]

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
regex = "1.11.1"
syn = { version = "2", features = ["full", "visit"] }
